# glider-playground

./: .gitignore  LICENSE  README.md  pyproject.toml
glider_playground/: app.py  cli.py  map_logic.py  plot_logic.py
glider_playground/static/: index.html
