[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glider-playground"
version = "0.1.4"
description = "A fast, web-based NetCDF explorer for glider data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Orlando Prugel-Bennett", email = "orlandopbennett@gmail.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "xarray",
    "pandas",
    "numpy",
    "matplotlib",
    "httpx"
]

[project.scripts]
glider-playground = "glider_playground.cli:main"

[tool.setuptools.packages.find]
include = ["glider_playground*"]